[FEATURE] Creating Model Class [UnsplashPhoto.kt] and add some library to gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,13 @@
 pluginManagement {
+    ext {
+        kotlinVersion = '1.7.10'
+    }
     repositories {
         gradlePluginPortal()
         google()
         mavenCentral()
     }
+
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
