--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,8 @@ dependencies {
     // Paging 3
     implementation "androidx.paging:paging-runtime:3.1.1"
 
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.13.0"
+
 
 }
