--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id "androidx.navigation.safeargs.kotlin"
     id 'dagger.hilt.android.plugin'
 }
 
@@ -71,6 +72,10 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.13.0"
+
+    // Navigation Component
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
 
 
 }
