--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
 
+    // Download Manager
+    implementation 'com.huxq17.pump:download:1.3.10'
+
 
 }
