--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,10 @@ plugins {
 android {
     compileSdk 32
 
+    namespace 'com.javadEsl.pixel'
+
     defaultConfig {
-        applicationId "com.javadEsl.imageSearchApp"
+        applicationId "com.javadEsl.pixel"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -52,7 +54,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.multidex:multidex:2.0.1"
-
 
     // Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
