--- a/settings.gradle
+++ b/settings.gradle
@@ -21,5 +21,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "ImageSearchApp"
+rootProject.name = "Pixel"
 include ':app'
