--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,7 @@ dependencies {
     // Download Manager
     implementation 'com.huxq17.pump:download:1.3.10'
 
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 }
