--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,6 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     implementation "me.saket.cascade:cascade:1.3.0"
+    implementation 'io.sentry:sentry-android:6.4.1'
 
 }
