--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,15 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
+// keystore.properties file, in the rootProject folder.
+def keystorePropertiesFile = rootProject.file("local.properties")
+
+// Initialize a new Properties() object called keystoreProperties.
+def keystoreProperties = new Properties()
+
+// Load your keystore.properties file into the keystoreProperties object.
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
     compileSdk 32
 
@@ -16,17 +25,38 @@ android {
         applicationId "com.javadEsl.pixel"
         minSdk 21
         targetSdk 32
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 4
+        versionName "1.1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            resValue 'string', 'app_name', 'Pixel'
+        }
+        debug {
+            debuggable true
+            minifyEnabled false
+            versionNameSuffix '-DEBUG'
+            applicationIdSuffix '.debug'
+            signingConfig signingConfigs.debug
+            resValue 'string', 'app_name', 'P-Debug'
         }
     }
     compileOptions {
