--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,7 @@ dependencies {
     implementation "me.saket.cascade:cascade:1.3.0"
     implementation 'io.sentry:sentry-android:6.4.1'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+
 }
