--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,5 +119,8 @@ dependencies {
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
+    def alerterVersion = "7.2.4"
+    implementation "com.github.tapadoo:alerter:$alerterVersion"
+
 
 }
