--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ android {
         versionName "1.1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        buildConfigField "String", "TAPSELL_KEY", "\"cirdmsdsjibaqntntfaqmresfogbmbdkjamjgkgdojrkbrcbakcoednnkbiadchffhcngg\""
+        buildConfigField "String", "TAPSELL_STANDARD_BANNER", "\"632eb9df6c8f4e3029d3e997\""
+        buildConfigField "String", "TAPSELL_NATIVE_BANNER", "\"632ecfd049ace716e8d7f9dd\""
     }
 
     signingConfigs {
@@ -127,5 +129,6 @@ dependencies {
 
     implementation 'com.github.Dimezis:BlurView:version-2.0.2'
 
+    implementation("ir.tapsell.plus:tapsell-plus-sdk-android:2.1.7")
 
 }
