--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,4 +134,7 @@ dependencies {
     //image classification
     implementation 'com.google.mlkit:image-labeling:17.0.7'
 
+    //shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
 }
