[FIX] package address in Ext Files [FIX] disable mlkit library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,14 +17,14 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     namespace 'com.javadEsl.pixel'
 
     defaultConfig {
         applicationId "com.javadEsl.pixel"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 5
         versionName "1.2.0"
         multiDexEnabled true
@@ -120,15 +120,12 @@ dependencies {
     def alerterVersion = "7.2.4"
     implementation "com.github.tapadoo:alerter:$alerterVersion"
 
-    //ShowCaseView
-    implementation 'com.github.mreram:showcaseview:1.4.1'
-
     implementation 'com.github.Dimezis:BlurView:version-2.0.2'
 
     implementation("ir.tapsell.plus:tapsell-plus-sdk-android:2.1.7")
 
-    //image classification
-    implementation 'com.google.mlkit:image-labeling:17.0.7'
+//    //image classification
+//    implementation 'com.google.mlkit:image-labeling:17.0.7'
 
     //shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
