--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,4 +133,8 @@ dependencies {
     //pinview
     implementation 'io.github.chaosleung:pinview:1.4.4'
 
+    // Kotlin + coroutines
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+
+
 }
